--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,30 @@
+<!doctype html>
+<html>
+    <head>
+        <title>Module 2 - Solution</title>
+        <meta charset="utf-8">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
 
+    </head>
+
+    <body>
+        <!-- do I need to put "h1" inside a "div"? -->
+        <h1>My Site</h1>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4"> 
+                  <p id=p1 class="block">Chicken</p> 
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4"> <p id=p2 class="block">Beef</p> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p></div>
+                <div class="col-sm-12 col-md-12 col-lg-4"> <p id=p3 class="block">Sushi</p> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p></div>
+
+            </div>
+        </div>
+        <!--
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</span>
+        -->
+    </body>
+</html>
