Week 2 assignment - update 1

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,19 +10,30 @@
 
     <body>
         <!-- do I need to put "h1" inside a "div"? -->
-        <h1>My Site</h1>
+        <h1>Our Menu</h1>
 
-        <div class="container-fluid">
+        <!-- <div class="container-fluid"> -->
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4"> 
-                  <p id=p1 class="block">Chicken</p> 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p>
+                <div class="col-md-6 col-lg-4"> 
+                  <div class="section">
+                    <p id=pChicken class="box">Chicken</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p>
+                  </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4"> <p id=p2 class="block">Beef</p> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p></div>
-                <div class="col-sm-12 col-md-12 col-lg-4"> <p id=p3 class="block">Sushi</p> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p></div>
-
+                <div class="col-md-6 col-lg-4"> 
+                  <div class="section">
+                    <p id=pBeef class="box">Beef</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p>
+                  </div>
+                </div>            
+                <div class="col-md-12 col-lg-4"> 
+                  <div class="section">
+                    <p id=pSushi class="box">Sushi</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p>
+                  </div>
+                </div>
             </div>
-        </div>
+        <!-- </div> -->
         <!--
         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</span>
         -->
