--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
+<!doctype html>
 <html>
-<head>
-    <title>Hello Coursera</title>
-</head>
-
-<body>
-<h1>Hello Coursera! It's a great course!</h1>
-</body>
-
+    <head>
+        <meta charset ="utf-8">
+        <title>Coursera is Cool!</title>
+    </head>
+    <body>
+    
+    </body>
 </html>
