--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,1 +1,59 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Module 3 Solution</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+<body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
 
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li>
+              <a href="#">Chicken</a>
+            </li>
+            <li>
+              <a href="#">Beef</a>
+            </li>
+            <li>
+              <a href="#">Sushi</a>
+            </li>        
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <div id="main-content" class="container">
+    <h2 class="text-center">Our Menu</h2>
+      <div class="section col-xs-12">
+        <h3>Chicken</h3> 
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis dictum augue ut laoreet. Pellentesque venenatis fermentum elit vitae bibendum. Maecenas dictum, nulla nec placerat dignissim, lacus tortor dictum turpis, vel aliquam ex elit a libero. Ut blandit magna id purus ornare vehicula.</p>
+      </div>
+  </div>
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
